@@ -48,7 +48,6 @@
 				<configuration>
 					<jvmArgs>
 						<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
-						<jvmArg>-XX:+UseCompactObjectHeaders</jvmArg>
 					</jvmArgs>
 					<runMultipleSimulations>true</runMultipleSimulations>
 					<continueOnAssertionFailure>true</continueOnAssertionFailure>
